--- a/Resource/template/admin/index.twig
+++ b/Resource/template/admin/index.twig
@@ -11,21 +11,23 @@
 {#
 [商品管理]-[商品レビュー]-[一覧・検索]画面
 #}
-{% extends '@admin/default_frame.twig' %}
+
+{% extends '@admin/styleguide_frame.twig' %}
 
 {% set menus = ['product', 'product_review'] %}
 {% block title %}商品管理{% endblock %}
 {% block sub_title %}商品レビュー{% endblock %}
-{% form_theme searchForm 'bootstrap_3_horizontal_layout.html.twig' %}
+
+{% form_theme searchForm '@admin/Form/bootstrap_4_layout.html.twig' %}
 
 {% block stylesheet %}
-<link rel="stylesheet" href="{{ asset('/assets/css/bootstrap-datetimepicker.min.css', 'admin') }}">
+<link rel="stylesheet" href="{{ asset('assets/css/bootstrap-datetimepicker.min.css', 'admin') }}">
 {% endblock stylesheet %}
 
 {% block javascript %}
-<script src="{{ asset('/assets/js/vendor/moment.min.js', 'admin') }}"></script>
-<script src="{{ asset('/assets/js/vendor/moment-ja.js', 'admin') }}"></script>
-<script src="{{ asset('/assets/js/vendor/bootstrap-datetimepicker.min.js', 'admin') }}"></script>
+<script src="{{ asset('assets/js/vendor/moment.min.js', 'admin') }}"></script>
+<script src="{{ asset('assets/js/vendor/moment-ja.js', 'admin') }}"></script>
+<script src="{{ asset('assets/js/vendor/bootstrap-datetimepicker.min.js', 'admin') }}"></script>
 <script>
 $(function() {
     $('#product_review_download').click(function(event) {
@@ -81,145 +83,155 @@ function fnChangeActionSubmit(action) {
 
 {% block main %}
 <!--検索条件設定テーブルここから-->
-<div class="search-box">
+<div class="c-outsideBlock">
     <form name="search_form" id="search_form" method="post" action="">
         {{ form_widget(searchForm._token) }}
-        <div class="row">
-            <div class="col-md-12 accordion">
-                {{ form_widget(searchForm.multi, { attr: { placeholder: '投稿者名・投稿者URL', class : 'input_search' } } ) }}
-                <a class="toggle" href="#"><svg class="cb cb-minus"> <use xlink:href="#cb-minus"/></svg> <svg class="cb cb-minus"> <use xlink:href="#cb-minus"/></svg></a>
-                <div class="search-box-inner accpanel">
-                    <div class="row">
-                        <div class="col-sm-12 col-lg-10 col-lg-offset-1 search">
-                            <div class="row">
-                                <div class="col-xs-6">
-                                    <label>{{ searchForm.product_name.vars.label }}</label>
-                                    <div class="form-group">{{ form_widget(searchForm.product_name) }}</div>
-                                </div>
-                                <div class="col-xs-6">
-                                    <label>{{ searchForm.product_code.vars.label }}</label>
-                                    <div class="form-group">{{ form_widget(searchForm.product_code) }}</div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <label>{{ searchForm.sex.vars.label }}</label>
-                                    <div class="form-group">{{ form_widget(searchForm.sex) }}</div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <label>{{ searchForm.recommend_level.vars.label }}</label>
-                                    <div class="form-group">{{ form_widget(searchForm.recommend_level) }}</div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <label>{{ searchForm.review_start.vars.label }}</label>
-                                    <div class="form-group range">
-                                        {{ form_widget(searchForm.review_start, {'attr': {'class': 'input_cal'}}) }} ～ {{ form_widget(searchForm.review_end, {'attr': {'class': 'input_cal'}}) }}
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <label>{{ searchForm.status.vars.label }}</label>
-                                    <div class="form-group">{{ form_widget(searchForm.status) }}</div>
-                                </div>
-                            </div><!-- /.row -->
-                            <div class="col-sm-12">
-                                <p class="text-center"><a href="#" class="search-clear">検索条件をクリア</a></p>
-                            </div>
-                        </div>
+        <div class="c-outsideBlock__contents">
+            <div class="row justify-content-start">
+                <div class="col-6">
+                    <div class="mb-2">
+                        <label class="col-form-label">{{ 'admin.product.index.470'|trans }}</label>
+                        {{ form_widget(searchForm.multi, { attr: { placeholder: '投稿者名・投稿者URL', class : 'input_search' } } ) }}
+                    </div>
+                    <div class="d-inline-block mb-3" data-toggle="collapse" href="#searchDetail"
+                         aria-expanded="false" aria-controls="searchDetail"><a><i
+                                    class="fa fa-plus-square-o font-weight-bold mr-1"></i><span
+                                    class="font-weight-bold">{{ 'admin.product.index.detailed_search'|trans }}</span></a>
                     </div>
                 </div>
-            </div><!-- /.col -->
+            </div>
         </div>
-        <div class="row btn_area">
-            <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4 text-center">
-                <button class="btn btn-primary btn-block btn-lg" onclick="fnChangeActionSubmit('{{ url('plugin_admin_product_review') }}'); return false;">
-                    検索する <svg class="cb cb-angle-right"><use xlink:href="#cb-angle-right"></use></svg>
-                </button>
-            </div> <!-- /.col -->
+        <div class="c-subContents collapse ec-collapse" id="searchDetail">
+            <div class="row mb-2">
+                <div class="col-6 col-sm-4">
+                    <label>{{ searchForm.product_name.vars.label }}</label>
+                    <div class="form-group">{{ form_widget(searchForm.product_name) }}</div>
+                </div>
+                <div class="col-6 col-sm-4">
+                    <label>{{ searchForm.product_code.vars.label }}</label>
+                    <div class="form-group">{{ form_widget(searchForm.product_code) }}</div>
+                </div>
+                <div class="col-6 col-sm-4">
+                    <label>{{ searchForm.recommend_level.vars.label }}</label>
+                    <div class="form-group">{{ form_widget(searchForm.recommend_level) }}</div>
+                </div>
+
+                <div class="col-6 col-sm-4">
+                    <label>{{ searchForm.review_start.vars.label }}</label>
+                    <div class="form-group range">
+                        {{ form_widget(searchForm.review_start, {'attr': {'class': 'input_cal'}}) }} ～ {{ form_widget(searchForm.review_end, {'attr': {'class': 'input_cal'}}) }}
+                    </div>
+                </div>
+
+                <div class="col-6 col-sm-4">
+                    <label>{{ searchForm.sex.vars.label }}</label>
+                    <div class="form-group">{{ form_widget(searchForm.sex) }}</div>
+                </div>
+
+                <div class="col-6 col-sm-4">
+                    <label>{{ searchForm.status.vars.label }}</label>
+                    <div class="form-group">{{ form_widget(searchForm.status) }}</div>
+                </div>
+            </div>
+            <div class="d-block text-center">
+                <button class="btn btn-ec-regular search-clear"
+                        type="button">{{ 'admin.product.index.477'|trans }}</button>
+            </div>
+        </div><!-- /.col -->
+        <div class="c-outsideBlock__contents mb-5">
+            <button class="btn btn-ec-conversion px-5" type="submit">{{ 'admin.product.index.478'|trans }}</button>
+            {% if pagination %}
+                <span class="font-weight-bold ml-2">{{'admin.product.index.479'|trans({"%count%":pagination.totalItemCount})|raw}}</span>
+            {% endif %}
         </div>
     </form>
 </div>
 <!--検索条件設定テーブルここまで-->
-{% if pagination %}
-    <div class="row">
-        <div class="col-md-12">
-            <div class="box">
-                {% if pagination|length > 0 %}
-                <div class="box-header with-arrow">
-                    <h3 class="box-title">検索結果 <span class="normal"><strong>{{ pagination.totalItemCount }} 件</strong> が該当しました</span></h3>
-                </div><!-- /.box-header -->
-                <div class="box-body">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <ul class="sort-dd">
-                                <li class="dropdown">
-                                    {% for pageMax in pageMaxis if pageMax.name == page_count %}
-                                        <a class="dropdown-toggle" data-toggle="dropdown">{{ pageMax.name|e }}件<svg class="cb cb-angle-down icon_down"><use xlink:href="#cb-angle-down" /></svg></a>
-                                    {% endfor %}
-                                    <ul class="dropdown-menu">
-                                    {% for pageMax in pageMaxis if pageMax.name != page_count %}
-                                        <li><a href="{{ url('plugin_admin_product_review_page', {'page_no': 1, 'page_count': pageMax.name}) }}">{{ pageMax.name|e }}件</a></li>
-                                    {% endfor %}
-                                    </ul>
-                                </li>
-                                <li id="result_list_main__csv_menu" class="dropdown">
-                                    <a id="result_list_main__csv_menu_toggle" class="dropdown-toggle" data-toggle="dropdown">CSVダウンロード<svg class="cb cb-angle-down icon_down"> <use xlink:href="#cb-angle-down" /></svg></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a id="product_review_download" href="{{ url('plugin_admin_product_review_download') }}">CSVダウンロード</a></li>
-                                        <li><a href="{{ url('admin_setting_shop_csv', { id : csv_type }) }}">出力項目設定</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="table_list">
-                        <div class="table-responsive with-border">
-                            <table class="table table-striped">
-                                <thead>
-                                <tr>
-                                    <th>投稿日</th>
-                                    <th>投稿者</th>
-                                    <th>商品名</th>
-                                    <th>タイトル</th>
-                                    <th>おすすめレベル</th>
-                                    <th>公開・非公開</th>
-                                    <th>&nbsp;</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                {% for Review in pagination %}
-                                <tr>
-                                    <td>{{ Review.create_date|date('Y/m/d H:i') }}</td>
-                                    <td>{{ Review.reviewer_name }}</td>
-                                    <td>{{ Review.Product.name }}</td>
-                                    <td><a href="{{ url('plugin_admin_product_review_edit', { id : Review.id }) }}">{{ Review.title }}</a></td>
-                                    <td>{% for i in 1..Review.recommend_level %}★{% endfor %}</td>
-                                    <td>{#{{ Review.status }}#}</td>
-                                    <td class="icon_edit">
-                                        <div class="dropdown">
-                                            <a class="dropdown-toggle" data-toggle="dropdown"><svg class="cb cb-ellipsis-h"> <use xlink:href="#cb-ellipsis-h" /></svg></a>
-                                            <ul class="dropdown-menu dropdown-menu-right">
-                                            <li><a href="{{ url('plugin_admin_product_review_edit', { id : Review.id }) }}">編集</a></li>
-                                            <li><a href="{{ url('plugin_admin_product_review_delete', { id : Review.id }) }}" {{ csrf_token_for_anchor() }} data-method="delete" data-message="このレビューを削除してもよろしいですか？">削除</a></li>
-                                            </ul>
-                                        </div>
-                                    </td>
-                                </tr>
+<div class="c-contentsArea__cols">
+    <div class="c-contentsArea__primaryCol">
+        <div class="c-primaryCol">
+            <div class="row justify-content-between mb-2">
+                <div class="col-6">
+                    &nbsp;
+                </div>
+                <div class="col-5 text-right">
+                    <div class="d-inline-block mr-2">
+                        <div>
+                            <select class="custom-select" onchange="location = this.value;">
+                                {% for pageMax in pageMaxis %}
+                                    <option {% if pageMax.name == page_count %}selected=""{% endif %} value="{{ path('plugin_admin_product_review_page', {'page_no': 1, 'page_count': pageMax.name}) }}">{{ pageMax.name|e }}{{ 'admin.product.index.num'|trans }}</option>
                                 {% endfor %}
-                                </tbody>
-                            </table>
+                            </select>
                         </div>
                     </div>
-                </div><!-- /.box-body -->
-                {% if pagination.totalItemCount > 0 %}
-                    {% include "pager.twig" with { 'pages' : pagination.paginationData, 'routes' : 'plugin_admin_product_review_page' } %}
-                {% endif %}
-                {% else %}
-                    <div class="box-header with-arrow">
-                        <h3 class="box-title">検索条件に該当するデータがありませんでした。</h3>
-                    </div><!-- /.box-header -->
-                {% endif %}
-            </div><!-- /.box -->
-        </div><!-- /.col -->
+                    <div class="d-inline-block">
+                        <div class="btn-group" role="group">
+                            {# TODO onclickは適切ではないのでaタグで実装できるようにする #}
+                            <button class="btn btn-ec-regular" type="button"
+                                    onclick='location.href="{{ url('plugin_admin_product_review_download') }}"'><i
+                                        class="fa fa-cloud-download mr-1 text-secondary"></i><span>{{ 'admin.product.index.484'|trans }}</span>
+                            </button>
+                            {# TODO onclickは適切ではないのでaタグで実装できるようにする #}
+                            <button class="btn btn-ec-regular" type="button"
+                                    onclick='location.href="{{ url('admin_setting_shop_csv', { id : csv_type }) }}"'>
+                                <i
+                                        class="fa fa-cog mr-1 text-secondary"></i><span>{{ 'admin.product.index.486'|trans }}</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card rounded border-0 mb-4">
+                <div class="card-body p-0">
+                    <table class="table table-sm">
+                        <thead>
+                        <tr>
+                            <th class="text-center">ID</th>
+                            <th>投稿日</th>
+                            <th>投稿者</th>
+                            <th>商品名</th>
+                            <th>タイトル</th>
+                            <th>おすすめレベル</th>
+                            <th>公開・非公開</th>
+                            <th>&nbsp;</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for Review in pagination %}
+                            <tr>
+                                <td class="text-center">{{ Review.id }}</td>
+                                <td>{{ Review.create_date|date('Y/m/d H:i') }}</td>
+                                <td>{{ Review.reviewer_name }}</td>
+                                <td>{{ Review.Product.name }}</td>
+                                <td><a href="{{ url('plugin_admin_product_review_edit', { id : Review.id }) }}">{{ Review.title }}</a></td>
+                                <td>{% for i in 1..Review.recommend_level %}★{% endfor %}</td>
+                                <td>{#{{ Review.status }}#}</td>
+                                <td class="icon_edit">
+                                    <div class="col-auto text-right">
+                                        <a href="{{ url('plugin_admin_product_review_edit', { id : Review.id }) }}"
+                                           class="btn btn-ec-actionIcon mr-3 action-edit"
+                                           data-toggle="tooltip"
+                                           data-placement="top" title=""
+                                           data-original-title="名前を編集"><i class="fa fa-pencil fa-lg text-secondary"></i></a>
+                                        <a href="{{ url('plugin_admin_product_review_delete', { id : Review.id }) }}"
+                                           class="btn btn-ec-actionIcon mr-3"
+                                           data-toggle="modal" data-target="#confirmModal-3"
+                                           data-placement="top" title="削除"><i class="fa fa-close fa-lg text-secondary"></i></a>
+                                    </div>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="row justify-content-md-center mb-4">
+                    {% if pagination|length > 0 %}
+                        {% include "@admin/styleguide_pager.twig" with { 'pages' : pagination.paginationData, 'routes' : 'plugin_admin_product_review_page' } %}
+                    {% endif %}
+                </div>
+            </div>
+        </div>
     </div>
-{% endif %}
+</div>
 {% endblock %}
