--- a/Resource/template/default/error.twig
+++ b/Resource/template/default/error.twig
@@ -12,6 +12,35 @@
 
 {% set body_class = 'product_review_page' %}
 
+{% block stylesheet %}
+    <style>
+        .product_review_page p{
+            display: block;
+            -webkit-margin-before: 1em;
+            -webkit-margin-after: 1em;
+            -webkit-margin-start: 0px;
+            -webkit-margin-end: 0px;
+        }
+        @media only screen and (min-width: 768px){
+            .complete_message {
+                text-align: center;
+            }
+            .complete_message .heading01 {
+                font-size: 3.2rem;
+            }
+        }
+        .product_review_page a.btn-info {
+            color: #fff;
+            background-color: #525263;
+            border-color: #525263;
+            padding: 10px 16px;
+            font-weight: bold;
+            height: 44px;
+            border-radius: 0;
+        }
+    </style>
+{% endblock stylesheet %}
+
 {% block main %}
     <h1 class="page-heading">レビューを書く - エラー</h1>
     <div class="container-fluid">
