--- a/Resource/template/default/index.twig
+++ b/Resource/template/default/index.twig
@@ -14,6 +14,13 @@
 
 {% block stylesheet %}
 <style>
+    .product_review_page p{
+        display: block;
+        -webkit-margin-before: 1em;
+        -webkit-margin-after: 1em;
+        -webkit-margin-start: 0px;
+        -webkit-margin-end: 0px;
+    }
     .product_review_page .dl_table {
         margin: 0 0 16px;
     }
@@ -36,7 +43,11 @@
     .product_review_page #product_review_sex .radio input[type="radio"] {
         margin-right: 10px;
     }
-    .product_review_page form .form-control{
+    .product_review_page form dl #product_review_sex .form-check{
+        display: inline-block;
+        margin-right: 10px;
+    }
+    .product_review_page form dl .form-control{
         border: 1px solid #C4CCCE;
         border-radius: 3px !important;
         box-shadow: none;
@@ -45,7 +56,7 @@
         padding: 6px 12px;
         line-height: 1.5;
     }
-    .product_review_page form textarea.form-control{
+    .product_review_page form dl textarea.form-control{
         border: 1px solid #C4CCCE;
         border-radius: 3px !important;
         box-shadow: none;
@@ -69,6 +80,9 @@
         color: #fff;
         background-color: #525263;
         border-color: #525263;
+        font-size: 16px;
+        padding: 10px 16px;
+        font-weight: bold;
         height: 44px;
         border-radius: 0;
     }
