--- a/Resource/template/default/review.twig
+++ b/Resource/template/default/review.twig
@@ -9,9 +9,6 @@
  * file that was distributed with this source code.
  */
 #}
-{% block hoge %}
-    <script>alert("hoge")</script>
-{% endblock %}
 
 {% block review %}.
     {% import _self as stars %}
@@ -103,7 +100,6 @@
                 position: absolute;
                 right: 32px;
                 top: 24px;
-                font-size: 16px;
                 font-size: 1.6rem;
             }
 
@@ -127,7 +123,7 @@
             }
 
             #product_review_area .review_list p {
-                margin: 0px 0;
+                margin: 0;
             }
         }
     </style>
@@ -140,7 +136,7 @@
                     {% set positive_avg_star = avg %}
                     {% set nagative_avg_star = 5 - positive_avg_star %}
                     <dt class="heading02 sp">
-                        この商品のレビュー
+                        {{ 'plugin.front.review.product'|trans }}
 
                         <!--平均の星の数-->
                         <span class="recommend_average">
@@ -156,7 +152,7 @@
                         </svg>
                     </dt>
                     <dt class="heading02 pc active">
-                        この商品のレビュー
+                        {{ 'plugin.front.review.product'|trans }}
 
                         <!--平均の星の数-->
                         <span class="recommend_average">
@@ -179,9 +175,9 @@
                                             <!--投稿者-->
                                             <span class="recommend_name">
                                             {% if ProductReview.reviewer_url %}
-                                                <a href="{{ ProductReview.reviewer_url }}" target="_blank">{{ ProductReview.reviewer_name }}さん</a>
+                                                <a href="{{ ProductReview.reviewer_url }}" target="_blank">{{ ProductReview.reviewer_name }}{{ 'plugin.front.reviewer.name'|trans }}</a>
                                             {% else %}
-                                                {{ ProductReview.reviewer_name }}さん
+                                                {{ ProductReview.reviewer_name }}{{ 'plugin.front.reviewer.name'|trans }}
                                             {% endif %}
                                         </span>
 
@@ -206,7 +202,7 @@
                 </dl>
             </div>
             <div class="review_btn">
-                <a href="{{ url('plugin_products_detail_review', {'id' : id}) }}" class="btn btn-info">レビューを書く</a>
+                <a href="{{ url('plugin_products_detail_review', {'id' : id}) }}" class="btn btn-info">{{ 'plugin.front.review'|trans }}</a>
             </div>
         </div>
     </div>
