--- a/Resource/template/default/complete.twig
+++ b/Resource/template/default/complete.twig
@@ -42,7 +42,7 @@
 {% endblock stylesheet %}
 
 {% block main %}
-<h1 class="page-heading">レビューを書く</h1>
+<h1 class="page-heading">{{ 'plugin.front.review'|trans }}</h1>
 
 <div class="container-fluid">
     <div class="row">
@@ -51,16 +51,13 @@
                 <div id="deliveradd_input" class="row">
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="complete_message">
-                            <h2 class="heading01">ありがとうございました。</h2>
-                            <p>
-                                内容を確認後、反映させていただきます。<br>
-                                今しばらくお待ちくださいませ。
-                            </p>
+                            <h2 class="heading01">{{ 'plugin.front.complete.thank.you'|trans }}</h2>
+                            <p>{{ 'plugin.front.complete.message'|trans|raw }}</p>
                         </div>
                         <div class="row no-padding">
                             <div class="btn_group col-sm-offset-4 col-sm-4">
                                 <p>
-                                    <a href="{{ url('product_detail', {'id': id}) }}" class="btn btn-info btn-block">商品ページに戻る</a>
+                                    <a href="{{ url('product_detail', {'id': id}) }}" class="btn btn-info btn-block">{{ 'plugin.front.complete.btn.return'|trans }}</a>
                                 </p>
                             </div>
                         </div>
