--- a/Resource/template/default/confirm.twig
+++ b/Resource/template/default/confirm.twig
@@ -110,17 +110,17 @@
 {% form_theme form 'Form/form_layout.twig' %}
 
 {% block main %}
-<h1 class="page-heading">レビューを書く</h1>
+<h1 class="page-heading">{{ ''|trans }}</h1>
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
-            <p id="confirm_box__message">下記の内容で送信してもよろしいでしょうか？<br/>よろしければ、一番下の「送信する」ボタンをクリックしてください。</p>
+            <p id="confirm_box__message">{{ 'plugin.front.confirm.page.remind'|trans|raw }}</p>
 
             <form method="post" action="{{ url('plugin_products_detail_review', { id : Product.id }) }}">
                 {{ form_widget(form._token) }}
                 <div class="dl_table">
                     <dl>
-                        <dt><label>商品名</label></dt>
+                        <dt><label>{{ 'plugin.front.product.name'|trans }}</label></dt>
                         <dd class="form-group">
                             {{ Product.name }}
                         </dd>
@@ -168,10 +168,10 @@
                 <div class="row no-padding">
                     <div class="btn_group col-sm-offset-4 col-sm-4">
                         <p>
-                            <button type="submit" class="btn btn-primary btn-block" name="mode" value="complete">送信する</button>
+                            <button type="submit" class="btn btn-primary btn-block" name="mode" value="complete">{{ 'plugin.front.form.send'|trans }}</button>
                         </p>
                         <p>
-                            <button type="submit" class="btn btn-info btn-block" name="mode" value="back">戻る</button>
+                            <button type="submit" class="btn btn-info btn-block" name="mode" value="back">{{ 'plugin.front.form.back'|trans }}</button>
                         </p>
                     </div>
                 </div>
