--- a/Resource/template/default/confirm.twig
+++ b/Resource/template/default/confirm.twig
@@ -110,7 +110,7 @@
 {% form_theme form 'Form/form_layout.twig' %}
 
 {% block main %}
-<h1 class="page-heading">{{ ''|trans }}</h1>
+<h1 class="page-heading">{{ 'plugin.front.review'|trans }}</h1>
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
