--- a/Resource/template/default/error.twig
+++ b/Resource/template/default/error.twig
@@ -42,7 +42,7 @@
 {% endblock stylesheet %}
 
 {% block main %}
-    <h1 class="page-heading">{{ '{{ ''|trans }}'|trans }}</h1>
+    <h1 class="page-heading">{{ 'plugin.front.error'|trans }}</h1>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
